# sysprof

./: meson.build
src/libsysprof/: meson.build  sysprof-memory-profile.c  sysprof-memory-profile.h  sysprof-memprof-profile.c  sysprof-memprof-source.c  sysprof.h
src/libsysprof-capture/: meson.build  sysprof-capture-cursor.c  sysprof-capture-reader.c  sysprof-capture-reader.h  sysprof-capture-types.h  sysprof-capture-writer-cat.c  sysprof-capture-writer.c  sysprof-capture-writer.h
src/libsysprof-ui/: libsysprof-ui.gresource.xml  meson.build  sysprof-display.c  sysprof-memory-aid.c  sysprof-memory-page.c  sysprof-memory-page.h  sysprof-memory-page.ui  sysprof-memprof-aid.c  sysprof-memprof-page.c  sysprof-memprof-page.h  sysprof-memprof-page.ui  sysprof-memprof-visualizer.c  sysprof-memprof-visualizer.h
src/libsysprof/preload/: meson.build  sysprof-memory-collector.c
src/tests/: allocs-by-size.c  cross-thread-frees.c  memory-stack-stash.c  meson.build  show-page-usage.c  test-capture.c
src/tools/: sysprof-dump.c
